--- a/src/components/left/left.css
+++ b/src/components/left/left.css
@@ -1,4 +1,4 @@
-.left{
+.left {
     flex: 3;
     height: calc(100vh - 50px);
     overflow-y: scroll;
@@ -6,40 +6,42 @@
     top: 50px;
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     width: 5px;
 }
 
-::-webkit-scrollbar-track{
+::-webkit-scrollbar-track {
     background-color: #f1f1f1;
 }
 
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
     background-color: rgb(179, 179, 179);
 }
 
-.wrapper{
+.wrapper {
     padding: 20px;
 }
 
-.list{
+.list {
     padding: 0;
     margin: 0;
     list-style: none;
 }
 
-.item{
+.item {
     display: flex;
     align-items: center;
     flex-direction: row;
     margin-bottom: 20px;
+    cursor: pointer;
 }
 
-.icon{
+.icon {
     margin-right: 15px;
+    color: gray;
 }
 
-.button{
+.button {
     width: 150px;
     border: none;
     padding: 10px;
@@ -47,11 +49,11 @@
     font-weight: 500;
 }
 
-.hr{
+.hr {
     margin: 20px 0;
 }
 
-.friendList{
+.friendList {
     padding: 0;
     margin: 0;
     list-style: none;
