--- a/src/components/share/share.css
+++ b/src/components/share/share.css
@@ -1,20 +1,20 @@
-.share{
+.share {
     width: 100%;
     height: 170px;
     border-radius: 10px;
-    box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.68);
+    box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
 }
 
-.shareWrapper{
-    padding: 10px; 
+.shareWrapper {
+    padding: 10px;
 }
 
-.shareTop{
+.shareTop {
     display: flex;
     align-items: center;
 }
 
-.profileImg{
+.profileImg {
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -22,47 +22,52 @@
     margin-right: 10px;
 }
 
-.shareInput{
+.shareInput {
     border: none;
     width: 80%;
 }
 
-.shareInput:focus{
+.shareInput:focus {
     outline: none;
 }
 
-.shareHr{
+.shareHr {
     margin: 20px;
 }
 
-.shareBottom{
+.shareBottom {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.options{
+.options {
     display: flex;
     margin-left: 12px;
 }
 
-.option{
+.option {
     display: flex;
     align-items: center;
     margin-right: 15px;
     cursor: pointer;
+    cursor: pointer;
 }
-.optionIcon{
+
+.optionIcon {
+    color: gray;
     font-size: 18px;
     margin-right: 3px;
+    margin-right: 5px;
 }
 
-.optionText{
+.optionText {
+    color: gray;
     font-size: 14px;
-    font-weight: 500;
+    font-weight: 600;
 }
 
-.shareButton{
+.shareButton {
     border: none;
     padding: 7px;
     border-radius: 5px;
