--- a/src/components/share/share.css
+++ b/src/components/share/share.css
@@ -1,6 +1,6 @@
 .share {
     width: 100%;
-    height: 170px;
+    height: max-content;
     border-radius: 10px;
     box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
 }
@@ -27,8 +27,29 @@
     width: 80%;
 }
 
+.shareImgContainer {
+    padding: 0 20px 10px 20px;
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+}
+
+.shareInputImg {
+    width: 100%;
+    object-fit: cover;
+}
+
 .shareInput:focus {
     outline: none;
+}
+
+.cancelImg {
+    font-size: 20px;
+    color: rgba(0, 0, 0, 0.705);
+    position: absolute;
+    top: 5px;
+    right: 25px;
+    cursor: pointer;
 }
 
 .shareHr {
@@ -55,7 +76,7 @@
 }
 
 .optionIcon {
-    color: gray;
+    color: tomato;
     font-size: 18px;
     margin-right: 3px;
     margin-right: 5px;
