--- a/src/components/left/left.css
+++ b/src/components/left/left.css
@@ -31,8 +31,40 @@
 .item {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     flex-direction: row;
     margin-bottom: 20px;
+    cursor: pointer;
+}
+
+.itemInfo {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.itemImg {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 10px;
+}
+
+.itemText {
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.itemBtn {
+    background-color: #1877f2;
+    color: white;
+    padding: 5px 10px;
+    border: none;
+    outline: none;
+    font-size: 14px;
+    font-weight: 600;
+    border-radius: 10px;
     cursor: pointer;
 }
 
