--- a/src/components/right/right.css
+++ b/src/components/right/right.css
@@ -34,6 +34,31 @@
     cursor: pointer;
 }
 
+.btnEdit {
+    padding: 5px 20px;
+    border: none;
+    outline: none;
+    color: white;
+    background-color: teal;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.btnEditCancel {
+    padding: 5px 20px;
+    border: 1px solid teal;
+    outline: none;
+    color: teal;
+    background-color: white;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 10px;
+    cursor: pointer;
+    margin-left: 10px;
+}
+
 .rightTitle {
     margin-bottom: 20px;
     margin-top: 20px;
@@ -56,7 +81,7 @@
 }
 
 .infoItem {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 .infoKey {
@@ -67,6 +92,15 @@
 
 .infoValue {
     font-weight: 300;
+}
+
+.infoValueInput {
+    font-weight: 300;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: gray;
+    border-bottom: 1px solid lightgray;
 }
 
 .followings {
