--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -1,23 +1,32 @@
-.profile{
+.profile {
     display: flex;
 }
 
-.profileRight{
+.profileRight {
     flex: 9;
 }
 
-.profileCover{
+.profileCover {
     height: 320px;
     position: relative;
 }
 
-.coverImg{
+.coverImg {
     width: 100%;
     height: 250px;
     object-fit: cover;
 }
 
-.profileUserImg{
+.imgCoverIcon {
+    position: absolute;
+    bottom: 80px;
+    left: 20px;
+    color: gray;
+    font-size: 30px;
+    cursor: pointer;
+}
+
+.profileUserImg {
     width: 150px;
     height: 150px;
     border-radius: 50%;
@@ -30,21 +39,54 @@
     border: 3px solid white;
 }
 
-.info{
+.profilePicIcon {
+    position: absolute;
+    left: 45%;
+    bottom: 15px;
+    z-index: 2;
+    color: gray;
+    font-size: 30px;
+    cursor: pointer;
+}
+
+.info {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-.profileUsername{
+.profileUsernameInput {
+    font-size: 24px;
+    text-align: center;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid lightgray;
+    margin-bottom: 10px;
+    width: 40%;
+    color: gray;
+}
+
+.profileUsername {
     font-size: 24px;
 }
 
-.profileDesc{
+.profileDescInput {
+    font-weight: 300;
+    font-size: 14px;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid lightgray;
+    width: 40%;
+    text-align: center;
+    resize: none;
+    color: gray;
+}
+
+.profileDesc {
     font-weight: 300;
 }
 
-.profileBottom{
+.profileBottom {
     display: flex;
 }
