--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -1,76 +1,76 @@
-.post{
+.post {
     width: 100%;
     border-radius: 10px;
-    box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.68);
+    box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
     margin: 30px 0;
 }
 
-.postWrapper{
+.postWrapper {
     padding: 10px;
 }
 
-.postTop{
+.postTop {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.topLeft{
+.topLeft {
     display: flex;
     align-items: center;
 }
 
-.topLeft .profileImg{
+.topLeft .profileImg {
     width: 32px;
     height: 32px;
     border-radius: 50%;
     object-fit: cover;
 }
 
-.userName{
+.userName {
     font-size: 15px;
     font-weight: 500;
     margin: 0 10px;
 }
 
-.postDate{
+.postDate {
     font-size: 12px;
 }
 
-.postCenter{
+.postCenter {
     margin: 20px 0;
 }
 
-.postImg{
+.postImg {
     margin-top: 20px;
     width: 100%;
     max-height: 500px;
     object-fit: contain;
 }
 
-.postBottom{
+.postBottom {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.bottomLeft{
+.bottomLeft {
     display: flex;
     align-items: center;
 }
 
-.like{
+.like {
     width: 24px;
     height: 24px;
     margin-right: 5px;
     cursor: pointer;
 }
 
-.likeCount{
+.likeCount {
     font-size: 15px;
 }
 
-.comment{
+.comment {
     font-size: 15px;
     cursor: pointer;
     border-bottom: 1px dashed gray;
