notification fonctionnalite complited

--- a/src/components/notification/notification.css
+++ b/src/components/notification/notification.css
@@ -16,8 +16,12 @@
 }
 
 .nUserImg {
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     object-fit: cover;
+}
+
+.notificationDesc {
+    width: 100%;
 }
