--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,4 +1,4 @@
-.login{
+.login {
     width: 100vw;
     height: 100vh;
     background-color: #f0f2f5;
@@ -7,31 +7,32 @@
     justify-content: center;
 }
 
-.loginWrapper{
+.loginWrapper {
     width: 70%;
     height: 70%;
     display: flex;
 }
 
-.loginLeft, .loginRight{
+.loginLeft,
+.loginRight {
     flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
-.loginLogo{
+.loginLogo {
     font-size: 50px;
     font-weight: 800;
     color: #1775ee;
     margin-bottom: 10px;
 }
 
-.loginDesc{
+.loginDesc {
     font-size: 24px;
 }
 
-.box{
+.box {
     height: 300px;
     padding: 20px;
     background-color: #fff;
@@ -41,7 +42,7 @@
     justify-content: space-between;
 }
 
-.loginInput{
+.loginInput {
     height: 50px;
     border-radius: 10px;
     border: 1px solid gray;
@@ -49,11 +50,11 @@
     padding-left: 20px;
 }
 
-.loginInput:focus{
+.loginInput:focus {
     outline: none;
 }
 
-.loginBtn{
+.loginBtn {
     height: 50px;
     border-radius: 10px;
     border: none;
@@ -64,16 +65,16 @@
     cursor: pointer;
 }
 
-.loginBtn:disabled{
+.loginBtn:disabled {
     cursor: not-allowed;
 }
 
-.forgot{
+.forgot {
     text-align: center;
     color: #1775ee;
 }
 
-.loginRegisterBtn{
+.loginRegisterBtn {
     width: 60%;
     align-self: center;
     height: 50px;
@@ -83,5 +84,6 @@
     color: white;
     font-size: 20px;
     font-weight: 500;
+    text-decoration: none;
     cursor: pointer;
 }
